--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
   flutter_circular_chart: ^0.1.0
+  flutter_phoenix: ^0.1.0
 
 dev_dependencies:
   flutter_test:
