--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="first_player_picker"
-        android:icon="@mipmap/FirstPlayerPickerLogo">
+        android:icon="@mipmap/fpp_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
