--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.4+4
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ^3.3.3
 
 dependencies:
   flutter:
@@ -15,13 +15,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  english_words: ^3.1.5
-  flutter_phoenix: ^0.1.0
-  confetti: ^0.5.4
+  cupertino_icons: ^1.0.5
+  english_words: ^4.0.0
+  flutter_phoenix: ^1.0.0
+  confetti: ^0.6.0
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.11.0
   flutter_test:
     sdk: flutter
 
